Use pydocstyle on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,7 @@ python:
 env: SKIP_INTERPRETER=true
 install:
   - pip install pycodestyle
+  - pip install pydocstyle
 script:
   - find . -type f -name "*.py" | xargs pycodestyle
+  - find . -type f -name "*.py" | xargs pydocstyle
