--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env: SKIP_INTERPRETER=true
 install:
   - pip install pycodestyle
   - pip install pydocstyle
+  - pip install black
 script:
   - make pycodestyle
   - make pydocstyle
+  - make pyformat
