--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install pycodestyle
   - pip install pydocstyle
   - pip install pytest-cov
+  - pip install -r requirements.txt
 script:
   - make pycodestyle
   - make pydocstyle
