--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
--i https://repository.engineering.redhat.com/nexus/repository/ccx/simple
-
 app-common-python==0.1.8
 boto3==1.14.27
 insights-core>=3.0.235
-insights-core-messaging==1.2.0
+git+https://github.com/RedHatInsights/insights-core-messaging@1.2.0
 jsonschema==3.2.0
 kafka-python==2.0.1
 python-json-logger==0.1.11
