--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ zip_safe = False
 packages = find:
 install_requires =
     app-common-python
+    ccx-messaging
     insights-core-messaging
     kafka-python
     requests
