--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,11 @@
+title: Insights SHA extractor
+description: SHA extraction service
+baseurl: "/insights-sha-exctractor"
+url: "https://supreme-garbanzo-c43cccab.pages.github.io"
 theme: jekyll-theme-minimal
+
+heading_anchors: true
+search_enabled: false
+
+footer_content: "Copyright &copy; 2022 Red Hat, Inc.</a>"
+
