--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: Insights SHA extractor
 description: SHA extraction service
-baseurl: "/insights-sha-exctractor"
+baseurl: "/insights-sha-extractor"
 url: "https://supreme-garbanzo-c43cccab.pages.github.io"
 
 heading_anchors: true
