--- a/deploy/clowdapp.yaml
+++ b/deploy/clowdapp.yaml
@@ -5,8 +5,6 @@ metadata:
   name: ccx-sha-extractor
 objects:
 
-# TODO env. variables used
-# TODO env. variables passed
 
 - kind: HorizontalPodAutoscaler
   apiVersion: autoscaling/v1
@@ -85,7 +83,7 @@ objects:
         topicName: ${CDP_DEAD_LETTER_QUEUE_TOPIC}
       - replicas: 3
         partitions: 2
-        topicName: {CDP_OUTGOING_TOPIC}
+        topicName: ${CDP_OUTGOING_TOPIC}
 
 - kind: ConfigMap
   apiVersion: v1
