[CCXDEV-7333] Update references to gitlab

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ author = Red Hat Inc.
 description-file = README.md
 license = Apache 2.0
 long_description_content_type = text/markdown
-home-page = https://github.com/RedHatInsights/insights-sha-extractor
+home-page = https://gitlab.cee.redhat.com/ccx/ccx-sha-extractor
 classifier =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
