--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ zip_safe = False
 packages = find:
 install_requires =
     app-common-python
-    ccx-messaging
+    ccx-messaging >= 3.1.0
     insights-core-messaging
     kafka-python
     requests
