Update version of ccx-messaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,15 +18,11 @@ zip_safe = False
 packages = find:
 install_requires =
     app-common-python
-    ccx-messaging >= 3.1.1
-    insights-core-messaging
-    kafka-python
-    requests
-    jsonschema
-    python-json-logger
-    prometheus_client
-    python-logstash
     boto3
+    ccx-messaging>=3.2.3
+    insights-core-messaging
+    python-json-logger
+    sentry-sdk
     watchtower
 setup_requires =
     setuptools
