--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,44 @@
-app-common-python==0.2.3
-boto3==1.14.27
-git+https://github.com/RedHatInsights/insights-ccx-messaging@v3.1.5
-insights-core>=3.0.235
-git+https://github.com/RedHatInsights/insights-core-messaging@1.2.0
-jsonschema==3.2.0
-kafka-python==2.0.1
-python-json-logger==0.1.11
-requests==2.24.0
-sentry-sdk==0.19.5
-watchtower==0.8.0
+app-common-python==0.2.5
+async-timeout==4.0.2
+attrs==22.2.0
+boto3==1.23.10
+botocore==1.26.10
+CacheControl==0.12.11
+ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@339a65c3d30146c2dac43ec27d59b3bb4efe32ea
+certifi==2022.12.7
+charset-normalizer==2.0.12
+confluent-kafka==1.9.2
+decorator==5.1.1
+defusedxml==0.7.1
+fsspec==2022.1.0
+idna==3.4
+importlib-metadata==4.8.3
+insights-core==3.1.14
+insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@c6ec7f06333a34c0431acd145101157f77ee5355
+Jinja2==3.0.3
+jmespath==0.10.0
+jsonschema==4.0.0
+kafka-python==2.0.2
+lockfile==0.12.2
+MarkupSafe==2.0.1
+msgpack==1.0.5
+packaging==21.3
+prometheus-client==0.16.0
+py==1.11.0
+pyparsing==3.0.9
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+PyYAML==6.0
+redis==4.3.5
+requests==2.27.1
+retry==0.9.2
+s3fs==0.4.2
+s3transfer==0.5.2
+sentry-sdk==1.17.0
+six==1.16.0
+typing_extensions==4.1.1
+urllib3==1.26.15
+watchtower==3.0.0
+zipp==3.6.0
+.
