--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ attrs==22.2.0
 boto3==1.23.10
 botocore==1.26.10
 CacheControl==0.12.11
-ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@339a65c3d30146c2dac43ec27d59b3bb4efe32ea
+ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@v3.2.5
 certifi==2022.12.7
 charset-normalizer==2.0.12
 confluent-kafka==1.9.2
@@ -14,7 +14,7 @@ fsspec==2022.1.0
 idna==3.4
 importlib-metadata==4.8.3
 insights-core==3.1.14
-insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@c6ec7f06333a34c0431acd145101157f77ee5355
+insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@1.2.2
 Jinja2==3.0.3
 jmespath==0.10.0
 jsonschema==4.0.0
