--- a/config.yaml
+++ b/config.yaml
@@ -40,7 +40,7 @@ service:
     - name: ccx_messaging.watchers.payload_tracker_watcher.PayloadTrackerWatcher
       kwargs:
         service_name: ccx-sha-extractor
-        bootstrap_servers: mq-kafka:29092
+        bootstrap.servers: mq-kafka:29092
         topic: platform.payload-status
     - name: ccx_messaging.watchers.stats_watcher.StatsWatcher
       kwargs:
