--- a/deploy/clowdapp.yaml
+++ b/deploy/clowdapp.yaml
@@ -56,9 +56,11 @@ objects:
             - name: SENTRY_DSN
               valueFrom:
                 secretKeyRef:
-                  key: SENTRY_DSN
-                  name: sentry-dsn
+                  key: dsn
+                  name: ccx-sha-extractor-dsn
                   optional: true
+            - name: SENTRY_ENVIRONMENT
+              value: ${ENV_NAME}
             - name: SENTRY_CATCH_WARNINGS
               value: '1'
             - name: LOGGING_TO_CW_ENABLED
