--- a/deploy/clowdapp.yaml
+++ b/deploy/clowdapp.yaml
@@ -65,6 +65,8 @@ objects:
               value: '1'
             - name: LOGGING_TO_CW_ENABLED
               value: "True"
+            - name: CW_LOG_LEVEL
+              value: ${CW_LOG_LEVEL}
             - name: CW_STREAM_NAME
               value: ${CSE_LOG_STREAM}
             - name: AWS_REGION_NAME
