--- a/config-devel.yaml
+++ b/config-devel.yaml
@@ -1,9 +1,10 @@
 plugins:
   packages:
-    - insights.specs.default
     - insights_sha_extractor
+    - insights.specs.default
     - pythonjsonlogger
     - pythonjsonlogger.jsonlogger
+    - ccx_messaging
   configs:
     - name: ccx_ocp_core.config.telemeter.TelemeterServiceConfig
       enabled: false
@@ -13,33 +14,27 @@ service:
   format: insights.formats._json.JsonFormat
   target_components: []
   consumer:
-    name: ccx_messaging.consumers.consumer.AnemicConsumer
+    name: ccx_messaging.consumers.kafka_consumer.KafkaConsumer
     kwargs:
       incoming_topic: ${CDP_INCOMING_TOPIC:platform.upload.announce}
-      group_id: ${CDP_GROUP_ID:insights_sha_extractor_app}
-      bootstrap_servers: ${CDP_CONSUMER_SERVER:kafka:29092}
+      group.id: ${CDP_GROUP_ID:ccx_data_pipeline_app}
+      bootstrap.servers: ${CDP_CONSUMER_SERVER:kafka:29092}
       platform_service: testareno
-      processing_timeout_s: 0
-      max_poll_records: 10
-      max_poll_interval_ms: 600000
-      heartbeat_interval_ms: 10000
-      session_timeout_ms: 20000
+      max.poll.interval.ms: 600000
+      heartbeat.interval.ms: 10000
+      session.timeout.ms: 20000
       dead_letter_queue_topic: ${CDP_DEAD_LETTER_QUEUE_TOPIC:dead.letter.queue}
   downloader:
     name: ccx_messaging.downloaders.http_downloader.HTTPDownloader
     kwargs:
       max_archive_size: 100 MiB
-  engine:
-    name: ccx_messaging.engines.sha_extractor_engine.SHAExtractorEngine
-    kwargs:
-      extract_timeout: 10
+
   publisher:
-    name: ccx_messaging.publishers.sha_publisher.SHAPublisher
+    name: ccx_messaging.publishers.rule_processing_publisher.RuleProcessingPublisher
     kwargs:
-      outgoing_topic: ${CDP_OUTGOING_TOPIC:archive-results}
-      bootstrap_servers: ${CDP_PRODUCER_SERVER:kafka:29092}
-  watchers:
-    - name: ccx_messaging.watchers.cluster_id_watcher.ClusterIdWatcher
+      outgoing_topic: ${CDP_OUTGOING_TOPIC:ccx.ocp.results}
+      bootstrap.servers: ${CDP_PRODUCER_SERVER:kafka:29092}
+      compression: gzip
 
   logging:
     version: 1
@@ -50,14 +45,6 @@ service:
         class: logging.StreamHandler
         stream: ext://sys.stdout
         formatter: json
-        filters:
-          - context_filter
-      logstash:
-        level: INFO
-        class: logstash.TCPLogstashHandler
-        host: "127.0.0.1"
-        port: 5000
-        version: 1
     formatters:
       brief:
         format: "%(message)s"
@@ -66,19 +53,15 @@ service:
         format: "%(filename)s %(lineno)d %(process)d %(levelname)s %(asctime)s %(name)s %(message)s"
       cloudwatch:
         format: "%(filename)s %(levelname)s %(asctime)s %(name)s %(hostname)s %(mac_address)s %(message)s"
-    filters:
-      context_filter:
-        (): "insights_sha_extractor.log_filter.LogFilter"
     root:
       handlers:
         - default
-        - logstash
     loggers:
       insights_messaging:
         level: DEBUG
-      ccx_messaging:
-        level: DEBUG
       insights:
         level: WARNING
-      insights_sha_extractor:
+      ccx_data_pipeline: 
+        level: DEBUG
+      ccx_messaging:
         level: DEBUG
