--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ include:
 stages:
   - lint
   - test
+  - bddtests
   - covcheck
   - deploy
 
@@ -34,6 +35,31 @@ test-py38:
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
   script:
     - pytest -v --cov=insights_sha_extractor
+
+
+bdd-tests:
+  stage: bddtests
+  image: quay.io/cloudservices/insights-behavioral-spec:latest
+  variables:
+    PATH_TO_LOCAL_SHA_EXTRACTOR: "$CI_PROJECT_DIR"
+    BDD_PATH: /insights-behavioral-spec
+    VIRTUAL_ENV: /insights-behavioral-spec-venv/
+  script:
+    - cd $BDD_PATH
+    - source $VIRTUAL_ENV/bin/activate && make insights-sha-extractor-tests
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+  services:
+    - name: quay.io/ccxdev/kafka-no-zk:latest
+      alias: kafka
+    - name: quay.io/ccxdev/minio-server-ubi:latest
+      alias: minio
+      command: ["server", "/data"]
+      variables:
+        MINIO_ACCESS_KEY: test_access_key
+        MINIO_SECRET_KEY: test_secret_access_key
+        PORT: 9000
 
 
 coverage-checking:
