--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,3 @@
-app-common-python==0.2.5
-async-timeout==4.0.2
-attrs==22.2.0
-boto3==1.23.10
-botocore==1.26.10
-CacheControl==0.12.11
-ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@v3.4.2
-certifi==2022.12.7
-charset-normalizer==2.0.12
-confluent-kafka==2.2.0
-decorator==5.1.1
-defusedxml==0.7.1
-fsspec==2022.1.0
-idna==3.4
-importlib-metadata==4.8.3
-insights-core==3.1.14
-insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@1.2.2
-Jinja2==3.0.3
-jmespath==0.10.0
-jsonschema==4.0.0
-lockfile==0.12.2
-MarkupSafe==2.0.1
-msgpack==1.0.5
-packaging==21.3
-prometheus-client==0.16.0
-py==1.11.0
-pyparsing==3.0.9
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-PyYAML==6.0
-redis==4.3.5
-requests==2.27.1
-retry==0.9.2
-s3fs==0.4.2
-s3transfer==0.5.2
-sentry-sdk==1.17.0
-six==1.16.0
-typing_extensions==4.1.1
-urllib3==1.26.15
-watchtower==3.0.0
-zipp==3.6.0
-.
+app-common-python>=0.2.5
+ccx-messaging @ git+https://github.com/RedHatInsights/insights-ccx-messaging@v3.5.4
+insights-core-messaging @ git+https://github.com/RedHatInsights/insights-core-messaging@1.2.4
