remove some ccx mentions

--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,12 @@ commands =
 [testenv:pydocstyle38]
 basepython = python3.8
 commands =
-  pydocstyle ccx_data_pipeline test
+  pydocstyle test
 
 [testenv:pylint38]
 basepython = python3.8
 commands =
-  pylint ccx_data_pipeline test
+  pylint test
 
 [pycodestyle]
 ignore = E402
