--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ latex:
 
 # Information about where the book exists on the web
 repository:
-  url: https://gitlab.cee.redhat.com/ccx/ccx-sha-extractor
+  url: https://github.com/RedHatInsights/insights-sha-extractor
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: master  # Which branch of the repository should be used when creating links (optional)
 
