--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "insights-sha-extractor"
 dynamic = ["version"]
 readme = "README.md"
 authors = [
-    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
+    {name="Observability Intelligence Processing Team", email="ccx-core-processing-team@redhat.com"}
 ]
 classifiers = [
     "Intended Audience :: Information Technology",
@@ -36,7 +36,7 @@ include = ["insights_sha_extractor"]
 text = "Apache-2.0"
 
 [project.urls]
-Homepage = "https://gitlab.cee.redhat.com/ccx/ccx-sha-extractor"
+Homepage = "https://github.com/RedHatInsights/insights-sha-extractor"
 
 [project.optional-dependencies]
 dev = [
