--- a/deploy/clowdapp.yaml
+++ b/deploy/clowdapp.yaml
@@ -18,7 +18,7 @@ objects:
     scaleTargetRef:
       apiVersion: apps/v1
       kind: Deployment
-      name: sha-extractor-instance
+      name: sha-extractor
     targetCPUUtilizationPercentage: 50
 
 - apiVersion: cloud.redhat.com/v1alpha1
